src/test/deca/syntax/invalid/resultats/test30_if-synt.res
./src/test/deca/syntax/invalid/test30_if.deca:15:4: mismatched input ')' expecting {INT, '-', 'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '(', '!', FLOAT, STRING}
